# cargo-cult

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: app.rs  database.rs  main.rs  ssh_client.rs  ssh_server.rs  terminal.rs
src/include/: ferris_ascii_art.txt
tui/: Dockerfile
tui/src/: app.rs  database.rs  ssh_server.rs
web/: index.html
