[package]
name = "cargo-cult"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = { version = "1.41.0", features = ["full"] }
async-trait = "0.1.83"
futures = "0.3.31"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
airtable-api = "0.1.36"
dotenv = "0.15.0"
anyhow = "1.0.93"
chrono = "0.4.38"
reqwest = "0.11.27"
clap = { version = "4.5.20", features = ["derive"] }
glob = "0.3.1"
dirs = "5.0.1"
whoami = "1.5.2"
